syntax = "proto3";
package askl.index;

option go_package = "github.com/planetA/askl-golang-indexer/pkg/indexpb;indexpb";

message Project {
  string project_name = 1;
  string root_path = 2;
  repeated Module modules = 3;
  repeated File files = 4;
}

message Module {
  int64 local_id = 1;           // Unique within project
  string module_name = 2;
  repeated Symbol symbols = 3;
}

message File {
  int64 local_id = 1;           // Unique within project
  optional int64 module_id = 2; // References Module.local_id when set
  string module_path = 3;
  string filesystem_path = 4;   // Metadata only, never used for filesystem access
  string filetype = 5;
  bytes content = 6;            // File content (content_hash computed server-side)
  repeated Declaration declarations = 7;  // Declarations in this file
  repeated SymbolRef refs = 8;  // References from this file
}

message Symbol {
  int64 local_id = 1;           // Unique within project
  string name = 2;
  SymbolScope scope = 3;
}

message Declaration {
  int64 symbol_local_id = 1;    // References Symbol.local_id
  SymbolType symbol_type = 2;
  int32 start_offset = 3;
  int32 end_offset = 4;
}

message SymbolRef {
  int64 to_symbol_local_id = 1; // References Symbol.local_id (unique within project)
  int32 from_offset_start = 2;
  int32 from_offset_end = 3;
}

enum SymbolScope {
  SYMBOL_SCOPE_UNSPECIFIED = 0;
  LOCAL = 1;
  GLOBAL = 2;
}

enum SymbolType {
  SYMBOL_TYPE_UNSPECIFIED = 0;
  DEFINITION = 1;
  DECLARATION = 2;
}
